modules/signoz/resources-otel-ui-ingress/reference-grant-ui.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-access-to-signoz-ui
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway
  to:
  - group: ""
    kind: Service
    name: signoz-frontend
